--- a/app/assets/javascripts/templates/comment_new.jst.ejs
+++ b/app/assets/javascripts/templates/comment_new.jst.ejs
@@ -1,16 +1,16 @@
 <% if(StreetEasyClone.currentUser) { %>
-	<h4>NEW COMMENT</h4>
+	<h4>NEW COMMENT 请留言</h4>
 	<form class="new-comment-form">
 		<label>
-			<p>Title (Required)</p>
+			<p>Title(*) 标题(必填)</p>
 	    <input type="text" name="comment[title]" class="big-input">
 	  </label>
 	  <br>
-	  <label>Comment (Required)</label>
+	  <label>Comment(*) 内容(必填)</label>
 			<textarea name="comment[body]"></textarea>
 		<br>
-		<button>Submit</button>
+		<button>Submit 提交</button>
 	</form>
 <% } else { %>
-	<p>You must be signed in to post a comment</p>
+	<p>You must be signed in to post a comment. 登录后才能留言</p>
 <% } %>
