--- a/app/assets/javascripts/templates/comments_list.jst.ejs
+++ b/app/assets/javascripts/templates/comments_list.jst.ejs
@@ -1,8 +1,8 @@
-<h4>COMMENTS</h4>
+<h4>COMMENTS 留言</h4>
 <ul class="comments-list">
 </ul>
 <% if (properties.length < 1 ) { %>
-	<p>Be the first to discuss this sale</p>
+	<p>Be the first to discuss this sale/rent! 抢沙发! </p>
 <% } %>
 
 
