--- a/app/assets/javascripts/templates/property_form.jst.ejs
+++ b/app/assets/javascripts/templates/property_form.jst.ejs
@@ -1,7 +1,7 @@
 <% if(action === "new") { %>
-	<h2 class="form-page-header">Add New Property</h2>
+	<h2 class="form-page-header">Add a new property  添加房子</h2>
 <% } else if (action === "edit") { %>
-	<h2 class="form-page-header">Edit Property</h2>
+	<h2 class="form-page-header">Edit a property 修改房子</h2>
 <% } %>
 
 <form class="new-property-form">
@@ -18,27 +18,28 @@
 			<% } %>
 			<div class="main-photo-button-container">
 				<input type="file" name="property_photo" id="main-photo-upload">
-				<button class="main-photo-button"> + Add/Change Main Photo</button>
+				<button class="main-photo-button">Upload Cover上传封面照片</button>
 			</div>
 		</div>
 		<div class="right-hand-form">
+			<b>* means required field. * 必填</b>
 			<ul class="group">
 				<li class="form-element">
-		  		<label>Address (Required)</label>
+		  		<label>Address(*) 地址(*)</label>
 		    	<input type="text" name="address" value="<%= property.escape("address") %>" class="medium-input">
 				</li>
 				<li class="form-element">
-				  <label>Unit</label>
+				  <label>Unit 单元</label>
 			    <input type="text" name="unit" value="<%= property.escape("unit") %>" class="small-input">
 				</li>
 				<li class="form-element">
-				  <label>Zip (Required)</label>
+				  <label>Zip Code(*) 邮编(*)</label>
 				  <input type="text" name="zip" value="<%= property.escape("zip") %>" class="small-input">
 				</li>
 				<li class="form-element">
-				  <label for="borough-select">Borough (Required)</label>
+				  <label for="borough-select">Borough(*) 区(*)</label>
 				  <select name="borough" id="borough-select" class="small-input">
-						<option value="">(Choose one)</option>
+						<option value="">(Choose one 单选)</option>
 						<% for(var i = 0; i < StreetEasyClone.boroughs.length; i++) { %>
 							<% if(property.escape("borough").toLowerCase() === StreetEasyClone.boroughs[i].toLowerCase()) { %>
 								<option value="<%= StreetEasyClone.boroughs[i] %>" Selected>
@@ -53,9 +54,9 @@
 				  </select>
 				</li>
 				<li class="form-element">
-				  <label for="neighborhood-select">Neighborhood (Required)</label>
+				  <label for="neighborhood-select">Neighborhood(*) 街区(*)</label>
 				  <select name="neighborhood" id="neighborhood-select" class="small-input">
-				    <option value="">(Choose one)</option>
+				    <option value="">(Choose one 单选)</option>
 						<% for(var i = 0; i < StreetEasyClone.neighborhoods.length; i++) { %>
 							<% if(property.escape("neighborhood").toLowerCase() === StreetEasyClone.neighborhoods[i].toLowerCase()) { %>
 								<option value="<%= StreetEasyClone.neighborhoods[i] %>" Selected>
@@ -70,49 +71,50 @@
 				  </select>
 				</li>
 				<li class="form-element">
-				  <label>Price (Required)</label>
-				    <input type="number" name="price" value="<%= property.escape("price") %>" class="medium-input">
-				 </li>
-	 				<li class="form-element">
-	 				  <label for="apt-type-select">Apartment Type (Required)</label>
-	 				  <select name="apt_type" id="apt-type-select" class="small-input">
-	 						<option value="">(Choose one)</option>
-	 						<% for(var i = 0; i < StreetEasyClone.apt_types.length; i++) { %>
-	 							<% if(property.escape("apt_type").toLowerCase() === StreetEasyClone.apt_types[i].toLowerCase()) { %>
-	 								<option value="<%= StreetEasyClone.apt_types[i] %>" Selected>
-	 									<%= StreetEasyClone.apt_types[i] %>
-	 								</option>
-	 							<% } else { %>
-	 								<option value="<%= StreetEasyClone.apt_types[i] %>">
-	 									<%= StreetEasyClone.apt_types[i] %>
-	 								</option>
-	 							<% } %>
-	 						<% } %>
-	 				  </select>
-	 				</li>
+					<label for="apt-type-select">Apartment Type(*) 公寓类型(*)</label>
+					<select name="apt_type" id="apt-type-select" class="small-input">
+						<option value="">(Choose one)</option>
+						<% for(var i = 0; i < StreetEasyClone.apt_types.length; i++) { %>
+							<% if(property.escape("apt_type").toLowerCase() === StreetEasyClone.apt_types[i].toLowerCase()) { %>
+								<option value="<%= StreetEasyClone.apt_types[i] %>" Selected>
+									<%= StreetEasyClone.apt_types[i] %>
+								</option>
+							<% } else { %>
+								<option value="<%= StreetEasyClone.apt_types[i] %>">
+									<%= StreetEasyClone.apt_types[i] %>
+								</option>
+							<% } %>
+						<% } %>
+					</select>
+				</li>
 				 <li class="form-element">
-				  <label>Beds</label>
-				    <input type="number" name="beds" value="<%= property.escape("beds") %>"class="small-input">
+				  <label>Beds 卧室</label>
+				    <input type="text" name="beds" value="<%= property.escape("beds") %>"class="small-input">
 				 </li>
 				 <li class="form-element">
-				  <label>Baths</label>
+				  <label>Baths 浴室</label>
 				    <input type="text" name="baths" value="<%= property.escape("baths") %>"class="small-input">
 				 </li>
 				 <li class="form-element">
-				  <label>Square Footage</label>
-				    <input type="number" name="sq_ft" value="<%= property.escape("sq_ft") %>"class="small-input">
+				  <label>Square Footage 平方英尺</label>
+				    <input type="text" name="sq_ft" value="<%= property.escape("sq_ft") %>"class="small-input">
 				</li>
-				
 				<li class="form-element">
-					<label>Description</label>
+					<label>Price(*) 价格(*)</label>
+						<input type="text" name="price" value="<%= property.escape("price") %>" class="small-input">
+				 </li>
+				<li class="form-element">
+					<label>Description 介绍</label>
 					<textarea name="description" class="new-form-description"><%= property.escape("description") %></textarea>
 				</li>
 			</ul>
 		</div>
 	</div>
 	<div class="form-button-container">
-		<button class="add-more-photos-button">Add More Photos</button>
-		<button class="add-property-button"><span></span></button>
+		<button class="add-more-photos-button">Upload More Photos 上传更多照片</button>
+		<br>
+		<br>
+		<button class="add-property-button">Submit 提交</button>
 	</div>
 </form>
 
@@ -120,7 +122,7 @@
 <br>
 
 <div class="additional-photos-container">
-	
+
 </div>
 
 <script>
@@ -128,6 +130,3 @@
 // 	event.preventDefault();
 // });
 </script>
-
-
-
