--- a/app/assets/javascripts/templates/property_show.jst.ejs
+++ b/app/assets/javascripts/templates/property_show.jst.ejs
@@ -4,14 +4,14 @@
 		<% if (parseInt(property.escape("owner_id")) === StreetEasyClone.currentUser) {%>
 			<li><a href="#/property/edit/<%= property.escape('id') %>" class="edit-button">Edit this listing</a><li>
 		<% } %>
-		
+
 		<% if (property.escape("following_users").indexOf(StreetEasyClone.currentUser) !== -1) { %>
 			<li><button class="save-button" disabled><span></span></button></li>
 		<% } else { %>
 			<li><button class="save-button"><span></span></button></li>
 		<% } %>
 	<% } %>
-	
+
 	</ul>
 </div>
 
@@ -20,7 +20,7 @@
 		<div class="photos-container">
 		</div>
 		<div class="description-container">
-			<h4>DESCRIPTION</h4>
+			<h4>DESCRIPTION 介绍</h4>
 			<p><%= property.escape("description") %></p>
 		</div>
 		<div class="comments-container">
@@ -45,9 +45,9 @@
 		<div class="show-map-container">
 			<div id="map"></div>
 		</div>
-		
+
 		<div class="subway-stations-container">
-			<h4>TRANSPORTATION</h4>
+			<h4>TRANSPORTATION 公共交通</h4>
 			<% if (property.subway_stations) {%>
 				<% for (var key in property.subway_stations) { %>
 					<p class="subway-station">
@@ -57,7 +57,7 @@
 					at <%= key %> <strong><%= property.subway_stations[key][0][1].toFixed(2) %> miles</strong></p>
 				<% } %>
 			<% } else { %>
-				<p>No information available</p>
+				<p></p>
 			<% } %>
 		</div>
 
@@ -81,7 +81,7 @@
 		var propertyLatitude  = false;
 		var propertyLongitude = false;
 	<% }%>
-	
+
 	if( propertyLatitude && propertyLongitude) {
 		map.setView([propertyLatitude, propertyLongitude], 15);
 		L.marker([propertyLatitude, propertyLongitude]).addTo(map);
