--- a/app/views/properties/show.html.erb
+++ b/app/views/properties/show.html.erb
@@ -1,7 +1,7 @@
 <h2><%= @property.address.split(" ").map(&:capitalize).join(" ") %> <%= @property.unit %></h2>
 <h3><%= @property.neighborhood.capitalize %></h3>
 <% if owner?(@property) %>
-	<a href="<%= edit_property_url(@property) %>">Edit this listing</a>
+	<a href="<%= edit_property_url(@property) %>">Edit 修改</a>
 <% end %>
 <br>
 <% if signed_in? %>
