--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,6 +38,7 @@
 			  <a href="#"><%= t :greetings %>! <%= current_user.email %> ▾</a>
 				<ul class="dropdown">
 					<li><a href="#"><%= t :search_house %></a>
+          <li><a href="/users/<%=current_user.id%>#_=_"><%= t :my_settings %></a></li>
 					<li><a href="#/property/new" class="new-property-link"><%= t :add_house %></a></li>
           <li><a href="#/properties/property[owner_id]=<%=current_user.id%>" class="my-property-link"><%= t :my_houses %></a></li>
 					<li><a href="#/properties/saved" class="saved-property-link"><%= t :saved_houses %></a></li>
@@ -68,46 +69,10 @@
 				<h3><%= t :please_sign_in %></h3>
 			</header>
 			<div class="sign-in-body">
-				<p><%= t :please_sign_in %></p>
+        <%= link_to t(:sign_in_facebook), user_facebook_omniauth_authorize_path %><br>
+        <%= link_to t(:sign_in_twitter), user_twitter_omniauth_authorize_path %><br>
+        <%= link_to t(:sign_in_google), user_google_oauth2_omniauth_authorize_path %><br>
 
-        <%= link_to "Sign in with Facebook", user_facebook_omniauth_authorize_path %>
-        <%= link_to "Sign in with Twitter", user_twitter_omniauth_authorize_path %>
-        <%= link_to "Sign in with Google", user_google_oauth2_omniauth_authorize_path %>
-
-				<div class="switch-button-container">
-					<ul class="group">
-						<li><button class="signin-switch"><%= t :signIn %></li>
-						<li><button class="register-switch"><%= t :register %></button></li>
-					</ul>
-				</div>
-				<form action="<%= session_url %>" method="POST">
-					<%= auth_token %>
-					<input type="text" name="user[email]" placeholder="Email Address" class="modal-input" id="signin-email">
-					<input type="password" name="user[password]" placeholder="Password" class="modal-input" id="signin-password">
-					<button class="sign-in-button"><%= t :signIn %></button>
-				</form>
-			</div>
-		</article>
-
-		<article class="register-view">
-			<header>
-				<button class="sign-in-cancel"><%= t :cancel %></button>
-				<h3><%= t :register %></h3>
-			</header>
-			<div class="sign-in-body">
-				<p><%= t :please_register %></p>
-				<div class="switch-button-container">
-					<ul class="group">
-						<li><button class="signin-switch"><%= t :signIn %></li>
-						<li><button class="register-switch"><%= t :register %></button></li>
-					</ul>
-				</div>
-				<form action="<%= users_url %>" method="POST">
-					<%= auth_token %>
-					<input type="text" name="user[email]" placeholder="Email Address" class="modal-input">
-					<input type="password" name="user[password]" placeholder="Password" class="modal-input">
-					<button class="sign-in-button"><%= t :register %></button>
-				</form>
 			</div>
 		</article>
 	</section>
@@ -146,34 +111,12 @@
 			event.preventDefault();
 			$("#sign-in-sign-up").toggleClass("is-active");
 			$(".signin-view").toggleClass("is-active");
-			$(".signin-switch").toggleClass("is-active");
-		});
-
-		$(".signin-switch").on("click", function(event) {
-			if(!$(event.currentTarget).hasClass("is-active")) {
-				$(".signin-view").toggleClass("is-active");
-				$(".signin-switch").toggleClass("is-active");
-				$(".register-view").toggleClass("is-active");
-				$(".register-switch").toggleClass("is-active");
-			}
-		});
-
-		$(".register-switch").on("click", function(event) {
-			if(!$(event.currentTarget).hasClass("is-active")) {
-				$(".signin-view").toggleClass("is-active");
-				$(".signin-switch").toggleClass("is-active");
-				$(".register-view").toggleClass("is-active");
-				$(".register-switch").toggleClass("is-active");
-			}
 		});
 
 		$(".sign-in-cancel").on("click", function(event) {
 			event.preventDefault();
 			$("#sign-in-sign-up").toggleClass("is-active");
 			$(".signin-view").removeClass("is-active");
-			$(".signin-switch").removeClass("is-active");
-			$(".register-view").removeClass("is-active");
-			$(".register-switch").removeClass("is-active");
 		});
 
     $("#sign-in-sign-up").on("click", function(event){
@@ -181,9 +124,6 @@
         event.preventDefault();
         $("#sign-in-sign-up").toggleClass("is-active");
 				$(".signin-view").removeClass("is-active");
-				$(".signin-switch").removeClass("is-active");
-				$(".register-view").removeClass("is-active");
-				$(".register-switch").removeClass("is-active");
       }
     });
 
